Dataset summary 'hover' on mobile fix

--- a/css/explore.css
+++ b/css/explore.css
@@ -602,9 +602,15 @@
     justify-content: center;
     border-radius: 30px;
 }
-.square-card:hover .square-overlay {
+.square-card.show-overlay .square-overlay {
     opacity: 1;
     visibility: visible;
+}
+@media (hover: hover) and (pointer: fine) {
+    .square-card:hover .square-overlay {
+        opacity: 1;
+        visibility: visible;
+    }
 }
 .square-overlay h4 {
     font-family: var(--font-heading);
